<resources>
    <string name="app_name">TicTacToe</string>
    <string name="ZeroOne">-</string>
    <string name="ZeroTwo">-</string>
    <string name="ZeroThree">-</string>
    <string name="OneOne">-</string>
    <string name="OneTwo">-</string>
    <string name="OneThree">-</string>
    <string name="TwoOne">-</string>
    <string name="TwoTwo">-</string>
    <string name="TwoThree">-</string>
    <string name="reset">Reset</string>
    <string name="tictactow">TicTacToe</string>
</resources>